# buildroot-klipper3d

./: Config.in  README.md  external.desc  external.mk
board/raspberrypi/: config_4_uart0.txt  users.config
board/raspberrypi/rootfs/var/lib/iwd/: AndroidAP.psk  FASTWEB-skd5VN.psk
configs/: raspberrypi4_klipper3d_defconfig
package/arm-gnu-toolchain-old/: arm-gnu-toolchain-old.mk
package/klipper3d/: Config.in  klipper3d.mk  klipper_default.config  klipper_f401.config
package/klipper3d-repl/: Config.in  klipper3d-repl.mk  pyproject.toml
package/klipper3d-wrecklab/: Config.in  klipper3d-wrecklab.mk
package/klipper3d-wrecklab/opt/klipper/config/: printer_xyz.cfg
package/klipper3d/config/: printer_xyz.cfg
package/klipper3d/etc/default/: klipper
package/klipper3d/etc/init.d/: S90klipper
package/klipper3d/etc/systemd/system/: klipper.service
package/klipper3d/etc/systemd/system/logrotate.d/: klipper
package/klipper3d/klippy/: Makefile
